--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 <body>
   <div id="click-here" class="loading-wrapper">
   </div>
-  <script type="text/javascript">window.onload = function(){ location.href = 'https://www.sakirashop.com/trangchu'; }</script>
+  <script type="text/javascript">window.onload = function(){ location.href = 'https://www.sakira.shop/trangchu'; }</script>
 </body>
 </html>
